--- a/src/Caers.Api/Caers.Api.csproj
+++ b/src/Caers.Api/Caers.Api.csproj
@@ -12,4 +12,10 @@
       <PackageReference Include="Corvus.Json.ExtendedTypes" Version="1.0.18" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="SampleReport\CAERS_ExampleFile_v1.0.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
