Add report element types

--- a/src/Caers.Api/Caers.Api.csproj
+++ b/src/Caers.Api/Caers.Api.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Corvus.Json.ExtendedTypes" Version="1.0.18" />
+      <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
     </ItemGroup>
 
     <ItemGroup>
